# multiprocessing-logging

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  multiprocessing_logging.py  pyproject.toml  setup.py  shippable.yml  tox.ini
tests/: test_multiprocessing_logging.py
